fix(month-view): stop events overflowing on ie11
Fixes #501

--- a/src/modules/month/calendar-month-view.scss
+++ b/src/modules/month/calendar-month-view.scss
@@ -45,6 +45,11 @@
 
   .cal-day-cell {
     min-height: 100px;
+
+    // ie11 hack for https://github.com/mattlewis92/angular-calendar/issues/501
+    @media all and (-ms-high-contrast: none) {
+      display: block;
+    }
   }
 
   .cal-day-cell:not(:last-child) {
